--- a/Idle Factory/HUD/HUD Actions/GameInventoryScene/GameInventoryScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions/GameInventoryScene/GameInventoryScene.storyboard
@@ -69,43 +69,57 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="93" height="90"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dlL-cN-TfT">
-                                                            <rect key="frame" x="5" y="10" width="83" height="55"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="empty-slot" translatesAutoresizingMaskIntoConstraints="NO" id="DJ2-CY-FKD">
+                                                            <rect key="frame" x="21.5" y="20" width="50" height="50"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="55" id="5g4-b0-ULm"/>
-                                                                <constraint firstAttribute="width" constant="75" id="whk-NE-OdW"/>
+                                                                <constraint firstAttribute="height" constant="50" id="81b-PN-eZt"/>
+                                                                <constraint firstAttribute="width" secondItem="DJ2-CY-FKD" secondAttribute="height" multiplier="1:1" id="ksJ-XW-GEt"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="dmo-V2-lTz">
+                                                        <skView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zvy-Ka-w9c">
+                                                            <rect key="frame" x="5" y="10" width="83" height="55"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="55" id="5v9-ZB-TAO"/>
+                                                                <constraint firstAttribute="width" constant="75" id="KKO-BL-og5"/>
+                                                            </constraints>
+                                                        </skView>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BSd-JY-ERI">
+                                                            <rect key="frame" x="5" y="10" width="83" height="55"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="75" id="XQz-Gu-o2f"/>
+                                                                <constraint firstAttribute="height" constant="55" id="ZOi-kW-cOs"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="dmo-V2-lTz">
                                                             <rect key="frame" x="5" y="68" width="83" height="22"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4k.tv" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="XZ5-yh-Yo6">
-                                                                    <rect key="frame" x="0.0" y="1.5" width="13" height="19"/>
+                                                                    <rect key="frame" x="0.0" y="1.5" width="14" height="19"/>
                                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Tw-OE-Pv6">
-                                                                    <rect key="frame" x="14" y="7" width="13" height="8.5"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="7"/>
+                                                                    <rect key="frame" x="14" y="7.5" width="13.5" height="7.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="6"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="airpods" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Zzm-Bj-6CK">
-                                                                    <rect key="frame" x="28" y="1.5" width="13" height="18.5"/>
+                                                                    <rect key="frame" x="27.5" y="1.5" width="14" height="18.5"/>
                                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="epJ-dj-EYa">
-                                                                    <rect key="frame" x="42" y="7" width="13" height="8.5"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="7"/>
+                                                                    <rect key="frame" x="41.5" y="7.5" width="14" height="7.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="6"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tv" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="wsc-p7-nU9">
-                                                                    <rect key="frame" x="56" y="1.5" width="13" height="19"/>
+                                                                    <rect key="frame" x="55.5" y="1.5" width="13.5" height="19"/>
                                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oEg-wo-FFu">
-                                                                    <rect key="frame" x="70" y="7" width="13" height="8.5"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="7"/>
+                                                                    <rect key="frame" x="69" y="7.5" width="14" height="7.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="6"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -115,19 +129,26 @@
                                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstItem="dmo-V2-lTz" firstAttribute="leading" secondItem="tN2-iV-Jjz" secondAttribute="leading" constant="5" id="32j-cO-zzZ"/>
-                                                        <constraint firstItem="dlL-cN-TfT" firstAttribute="top" secondItem="tN2-iV-Jjz" secondAttribute="top" constant="10" id="EfP-B2-edw"/>
-                                                        <constraint firstAttribute="trailing" secondItem="dlL-cN-TfT" secondAttribute="trailing" constant="5" id="OtX-mi-DHu"/>
-                                                        <constraint firstItem="dlL-cN-TfT" firstAttribute="centerX" secondItem="tN2-iV-Jjz" secondAttribute="centerX" id="We9-Xh-iyz"/>
+                                                        <constraint firstItem="BSd-JY-ERI" firstAttribute="top" secondItem="tN2-iV-Jjz" secondAttribute="top" constant="10" id="3mM-CJ-nW3"/>
+                                                        <constraint firstItem="DJ2-CY-FKD" firstAttribute="centerX" secondItem="tN2-iV-Jjz" secondAttribute="centerX" id="GI0-OM-u2q"/>
+                                                        <constraint firstItem="Zvy-Ka-w9c" firstAttribute="top" secondItem="tN2-iV-Jjz" secondAttribute="top" constant="10" id="Qfd-0n-0cc"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Zvy-Ka-w9c" secondAttribute="trailing" constant="5" id="Wjo-pf-Ypq"/>
+                                                        <constraint firstItem="Zvy-Ka-w9c" firstAttribute="leading" secondItem="tN2-iV-Jjz" secondAttribute="leading" constant="5" id="jRc-wO-eXg"/>
                                                         <constraint firstAttribute="bottom" secondItem="dmo-V2-lTz" secondAttribute="bottom" id="lUa-hX-oON"/>
-                                                        <constraint firstItem="dmo-V2-lTz" firstAttribute="top" secondItem="dlL-cN-TfT" secondAttribute="bottom" constant="3" id="oPb-wY-XST"/>
                                                         <constraint firstAttribute="trailing" secondItem="dmo-V2-lTz" secondAttribute="trailing" constant="5" id="osK-UP-hhq"/>
                                                         <constraint firstItem="dmo-V2-lTz" firstAttribute="centerX" secondItem="tN2-iV-Jjz" secondAttribute="centerX" id="tXc-V9-NxZ"/>
-                                                        <constraint firstItem="dlL-cN-TfT" firstAttribute="leading" secondItem="tN2-iV-Jjz" secondAttribute="leading" constant="5" id="w6X-RV-pc5"/>
+                                                        <constraint firstItem="dmo-V2-lTz" firstAttribute="top" secondItem="Zvy-Ka-w9c" secondAttribute="bottom" constant="3" id="wZy-SG-ljv"/>
+                                                        <constraint firstAttribute="trailing" secondItem="BSd-JY-ERI" secondAttribute="trailing" constant="5" id="wyY-mU-gVg"/>
+                                                        <constraint firstItem="DJ2-CY-FKD" firstAttribute="centerY" secondItem="tN2-iV-Jjz" secondAttribute="centerY" id="xKb-MG-0eW"/>
+                                                        <constraint firstItem="BSd-JY-ERI" firstAttribute="leading" secondItem="tN2-iV-Jjz" secondAttribute="leading" constant="5" id="ym8-NN-unh"/>
+                                                        <constraint firstItem="dmo-V2-lTz" firstAttribute="top" secondItem="BSd-JY-ERI" secondAttribute="bottom" constant="3" id="zi3-Kd-h2T"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
                                                 <size key="customSize" width="93" height="90"/>
                                                 <connections>
-                                                    <outlet property="factoryTexture" destination="dlL-cN-TfT" id="cfV-Zg-81B"/>
+                                                    <outlet property="emptySlot" destination="DJ2-CY-FKD" id="0ap-YG-g6s"/>
+                                                    <outlet property="factoryTexture" destination="Zvy-Ka-w9c" id="FRY-kU-yLx"/>
+                                                    <outlet property="factoryTextureImage" destination="BSd-JY-ERI" id="gtm-2u-VRZ"/>
                                                     <outlet property="quantityType1" destination="8Tw-OE-Pv6" id="Ee2-wq-Yhh"/>
                                                     <outlet property="quantityType2" destination="epJ-dj-EYa" id="rFe-Bs-sc0"/>
                                                     <outlet property="quantityType3" destination="oEg-wo-FFu" id="Yiw-UZ-GJq"/>
@@ -587,16 +608,17 @@
         <image name="clear" catalog="system" width="128" height="114"/>
         <image name="close" width="31.5" height="31"/>
         <image name="close2" width="31.5" height="31"/>
+        <image name="empty-slot" width="44" height="44"/>
         <image name="iphone.smartbatterycase.gen2" catalog="system" width="108" height="128"/>
         <image name="tv" catalog="system" width="128" height="97"/>
         <namedColor name="HudActions-background">
             <color red="0.10199999809265137" green="0.65499997138977051" blue="0.82700002193450928" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Inventory_background">
-            <color red="0.7803921568627451" green="0.16470588235294117" blue="0.23137254901960785" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.77999997138977051" green="0.16500000655651093" blue="0.23100000619888306" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="actionColor1">
-            <color red="0.6470588235294118" green="0.87058823529411766" blue="0.27058823529411763" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.6470000147819519" green="0.87099999189376831" blue="0.27099999785423279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
