--- a/Idle Factory/HUD/HUD Actions/GameShopScene/GameShopScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions/GameShopScene/GameShopScene.storyboard
@@ -94,24 +94,10 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="zdo-80-blL">
-                                <rect key="frame" x="338.5" y="106" width="219" height="23"/>
+                                <rect key="frame" x="313.5" y="106" width="269" height="23"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hiz-8j-Bax">
-                                        <rect key="frame" x="0.0" y="0.0" width="104" height="23"/>
-                                        <color key="backgroundColor" name="Inventory_background"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="104" id="yA0-UX-q0f"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="Gerar um NFT"/>
-                                        <connections>
-                                            <action selector="generateNFT:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="xzY-70-wvT"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VGj-oK-1WJ">
-                                        <rect key="frame" x="115" y="0.0" width="104" height="23"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="104" height="23"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="104" id="rqh-RI-V4k"/>
@@ -123,6 +109,20 @@
                                         </state>
                                         <connections>
                                             <action selector="displayMarketplace:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="EKh-f3-L8q"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hiz-8j-Bax">
+                                        <rect key="frame" x="115" y="0.0" width="154" height="23"/>
+                                        <color key="backgroundColor" name="actionColor1"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="154" id="yA0-UX-q0f"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Gerar uma fábrica premium"/>
+                                        <connections>
+                                            <action selector="generateNFT:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="xzY-70-wvT"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -233,7 +233,7 @@
                                                         </view>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uEp-PC-Qyk">
                                                             <rect key="frame" x="22" y="173" width="87" height="21"/>
-                                                            <color key="backgroundColor" name="Inventory_background"/>
+                                                            <color key="backgroundColor" name="actionColor1"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="87" id="epN-f9-JwM"/>
                                                                 <constraint firstAttribute="height" constant="21" id="xK4-Dc-0WC"/>
@@ -330,7 +330,7 @@
         <namedColor name="HudActions-background">
             <color red="0.10199999809265137" green="0.65499997138977051" blue="0.82700002193450928" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="Inventory_background">
+        <namedColor name="actionColor1">
             <color red="0.6470000147819519" green="0.87099999189376831" blue="0.27099999785423279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
