--- a/Idle Factory/PopUp/WelcomeBack.storyboard
+++ b/Idle Factory/PopUp/WelcomeBack.storyboard
@@ -57,12 +57,15 @@
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n3M-Tr-esz">
                                         <rect key="frame" x="170.5" y="228" width="87" height="21"/>
+                                        <color key="backgroundColor" red="0.1053651944" green="0.65286397929999995" blue="0.82748192549999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="87" id="Ljl-dA-sBT"/>
                                             <constraint firstAttribute="height" constant="21" id="XoH-1q-yvg"/>
                                         </constraints>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="OK!" cornerStyle="dynamic"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="closePopUp:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="tAE-P2-3cg"/>
                                         </connections>
